--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -13,7 +13,22 @@
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="#">Commander</a>
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="/">Commander</a>
+                    </div>
+
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <form action="/search" class="navbar-form navbar-left">
+                            <div class="form-group">
+                                <input type="text" name="q" class="form-control" placeholder="Search" value="{{ q|default(null) }}">
+                            </div>
+                            <button type="submit" class="btn btn-default">search</button>
+                        </form>
                     </div>
                 </div>
             </nav>
